--- a/configure.ac
+++ b/configure.ac
@@ -5,14 +5,17 @@ AM_INIT_AUTOMAKE([dist-bzip2])
 AM_CONFIG_HEADER(config.h)
 AC_PROG_CC
 AC_PROG_INSTALL
+PKG_PROG_PKG_CONFIG([0.20]) 
 
-PKG_CHECK_MODULES(GTK, gtk+-2.0)
-PKG_CHECK_MODULES(XI, [inputproto >= 1.4.99] [xi >= 1.1.99])
-AC_SUBST(GTK_CFLAGS)
-AC_SUBST(GTK_LIBS)
-AC_SUBST(XI_CFLAGS)
-AC_SUBST(XI_LIBS)
-AC_SUBST(VERSION)
+# check for gtk
+PKG_CHECK_MODULES([GTK3], [gtk+-3.0 >= 2.99.3])
+AC_SUBST(GTK3_CFLAGS)
+AC_SUBST(GTK3_LIBS)
+
+# check for XInput
+PKG_CHECK_MODULES([XINPUT2], [xi >= 1.3])
+AC_SUBST(XINPUT2_CFLAGS)
+AC_SUBST(XINPUT2_LIBS)
 
 AC_OUTPUT([Makefile
            src/Makefile])
