--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,7 +1,7 @@
 bin_PROGRAMS = gnome-device-setup
 
 AM_CFLAGS = $(GTK3_CFLAGS) $(XINPUT2_CFLAGS)
-gnome_device_setup_LDADD = $(GTK3_LIBS) $(XINPUT2_LIBS)
+gnome_device_setup_LDADD = $(GTK3_LIBS) $(XINPUT2_LIBS) -lX11
 
 gnome_device_setup_SOURCES = main.c
 
